amazon-sqs/5.8/modules/ROOT/pages/amazon-sqs-connector-reference.adoc
= Amazon SQS Connector 5.8 Reference - Mule 4
:page-aliases: connectors::amazon/amazon-sqs-connector-reference.adoc

Anypoint Connector for Amazon SQS (Amazon SQS Connector) enables you to interface with the Amazon Simple Queue Service (Amazon SQS) API and manage SQS queueing services without having to interact with the Amazon SQS API directly.


== Configurations
---
[[config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic, Basic>> 
* <<config_role, Role>> 
 | The connection types to provide to this configuration. | | x
| Default Global Queue URL a| String |  This value is used when you do not set queue url on the operation level. If you do not specify the queue url here or on the operation level the exception is thrown. A queue URL is constructed in the following format:  https://sqs.{REGION}.amazonaws.com/{ACCOUNT_NUMBER}/{QUEUE_NAME} Example: https://sqs.us-east-1.amazonaws.com/123456789101/test-queue |  | 
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when as appropriate. |  | 
|===

=== Connection Types
[[config_basic]]
==== Basic

The Basic authentication method uses a session token provided by Amazon STS to connect to Amazon SQS.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String |  The session token provided by Amazon STS. |  | 
| Test Queue ARN a| String |  This parameter is used to test connection to SQS connector. If you do not specify this parameter the test connection is not performed. A queue ARN is constructed in the following format: `arn:aws:{REGION}:{ACCOUNT_NUMBER}:{QUEUE_NAME}`, for example: `arn:aws:sqs:us-east-1:123456789101:test-queue` |  | 
| Large Payload Support a| <<LargePayloadSupport>> |  |  | 
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 | 
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  | 
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 | 
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to true to obtain credentials from the AWS environment, See: https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html |  false | 
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  | 
| Host a| String |  The optional proxy host. |  | 
| Port a| Number |  The optional proxy port. |  | 
| Username a| String |  The optional proxy username. |  | 
| Password a| String |  The optional proxy password. |  | 
| Domain a| String |  The optional proxy domain. |  | 
| Workstation a| String |  The optional proxy workstation. |  | 
|===
[[config_role]]
==== Role

Configure the Amazon role ARN that uniquely identifies the role to assume to allow cross-account access.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String | Role ARN that uniquely identifies the role to assume to gain cross-account access. |  | x
| Test Queue ARN a| String | Parameter used to test the connection to the connector. If you do not specify this parameter, the test connection is not performed. A queue ARN is constructed in the following format: `arn:aws:{REGION}:{ACCOUNT_NUMBER}:{QUEUE_NAME}`, for example: `arn:aws:sqs:us-east-1:123456789101:test-queue`. |  | 
| Large Payload Support a| <<LargePayloadSupport>> |  |  | 
| Connection Timeout a| Number |  Amount of time to wait (in milliseconds) when initially establishing a connection before the connector times out. A value of 0 means infinity and is not recommended. |  50000 | 
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  | 
| Socket Timeout a| Number |  Amount of time to wait (in milliseconds) for data to be transferred over an established open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 | 
| Access Key a| String |  Access key provided by Amazon |  | x
| Secret Key a| String |  Secret key provided by Amazon |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to true to obtain credentials from the AWS environment, See: https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html |  false | 
| Region Endpoint a| String |  Sets the topic region endpoint |  US_EAST_1 | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Host a| String |  Optional proxy host |  | 
| Port a| Number |  Optional proxy port |  | 
| Username a| String |  Optional proxy username |  | 
| Password a| String |  Optional proxy password |  | 
| Domain a| String |  Optional proxy domain |  | 
| Workstation a| String |  Optional proxy workstation |  | 
|===

== Sources

[[receivemessages]]
=== Receive messages
`<sqs:receivemessages>`

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Visibility Timeout a| Number | Period of time during which other consumers are prevented from receiving and processing the same message in the queue |  30 | 
| Visibility Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Visibility Timeout configuration |  SECONDS | 
| Preserve Messages a| Boolean | Preserve messages after they are read rather than immediately deleting them from the queue after they are read |  false | 
| Number Of Messages a| Number |  |  1 | 
| Queue Url a| String | URL of the queue in which to receive messages |  | 
| Primary Node Only a| Boolean |  Whether to execute this source on only the primary node when running in cluster mode |  | 
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| String
|===

=== For Configurations
* <<config>> 


== Operations

* <<addPermission>> 
* <<changeMessageVisibility>> 
* <<changeMessageVisibilityBatch>> 
* <<createQueue>> 
* <<deleteMessage>> 
* <<deleteMessageBatch>> 
* <<deleteQueue>> 
* <<getApproximateNumberOfMessages>> 
* <<getQueueAttributes>> 
* <<getQueueUrl>> 
* <<listDeadLetterSourceQueues>> 
* <<listQueues>> 
* <<purgeQueue>> 
* <<read>> 
* <<removePermission>> 
* <<sendMessage>> 
* <<sendMessageBatch>> 
* <<setQueueAttributes>> 


[[addPermission]]
=== Add Permission
`<sqs:add-permission>`

This operation adds a permission to a message queue.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Label a| String |  Name for this permission |  | x
| Account Ids a| Array of String |  IDs of the AWS accounts to share this queue with |  | x
| Actions a| Array of String |  List to indicate how much to share (SendMessage, ReceiveMessage, ChangeMessageVisibility, DeleteMessage, GetQueueAttributes) |  | x
| Queue Url a| String |  Permissions are added to the queue represented by this URL. This parameter is optional, and if you do not specify `queueUrl`, you must specify the default global queue URL at the configuration level. |  | 
| Target Variable a| String | Name of a variable in which to store the operation's output |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String 
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[changeMessageVisibility]]
=== Change Message Visibility
`<sqs:change-message-visibility>`

This operation changes the visibility timeout of a specified message in a queue to a new value, not to exceed 12 hours.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Receipt Handle a| String |  Receipt handle associated with the message whose visibility timeout must change |  | 
| Visibility Timeout a| Number |  New value of the message visibility timeout (up to 4300 seconds or 12 hours) |  | x
| Visibility Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  SECONDS | 
| Queue Url a| String |  URL of the Amazon SQS queue to act on. This parameter is optional, and if you do not specify `queueUrl`, you must specify the Default Global Queue URL at the configuration level. |  | 
| Target Variable a| String |  Name of a variable in which to store the operation's output |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[changeMessageVisibilityBatch]]
=== Change Message Visibility Batch
`<sqs:change-message-visibility-batch>`


This operation changes the visibility timeout of up to 10 ChangeMessageVisibility requests, with each result reported individually in the response.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Receipt Handles a| Array of <<ChangeMessageVisibilityBatchRequestEntry>> |  List of receipt handles of the messages for which the visibility timeout must be changed |  `#[payload]` | 
| Queue Url a| String |  URL of the Amazon SQS queue to act on. This parameter is optional, and if you do not specify `queueUrl`, you must specify the Default Global Queue URL at the configuration level. |  | 
| Target Variable a| String | Name of a variable on which to store the operation's output |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[createQueue]]
=== Create Queue
`<sqs:create-queue>`

This operation creates a new queue, or returns the URL of an existing one. 

==== Queue Attributes

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| DelaySeconds | Number | Length of time, in seconds, for which the delivery of all messages in the queue is delayed. Valid values: An integer from 0 to 900 seconds (15 minutes). | 0 |
|MaximumMessageSize | Number | Limit of how many bytes a message can contain before Amazon SQS rejects it. Valid values: An integer from 1,024 bytes (1 KiB) to 262,144 bytes (256 KiB). | 262,144 (256 KiB) |
|MessageRetentionPeriod | Number | Length of time, in seconds, for which Amazon SQS retains a message. Valid values: An integer from 60 seconds (1 minute) to 1,209,600 seconds (14 days) | 345,600 (4 days) |
| Policy | String | The queue's policy. A valid AWS policy. | |
| ReceiveMessageWaitTimeSeconds | Number | Length of time, in seconds, for which a ReceiveMessage action waits for a message to arrive. Valid values: An integer from 0 to 20 (seconds) | 0 |
|RedrivePolicy | String | The string that includes the parameters for the dead-letter queue functionality of the source queue as a JSON object. | |
|VisibilityTimeout | Number | Visibility timeout for the queue, in seconds. Valid values: An integer from 0 to 43,200 (12 hours) | 30 |  
|KmsMasterKeyId | String | ID of an AWS-managed customer master key (CMK) for Amazon SQS or a custom CMK. | |
| KmsDataKeyReusePeriodSeconds | Number | Length of time, in seconds, for which Amazon SQS can reuse a data key to encrypt or decrypt messages before calling AWS KMS again. An integer representing seconds, between 60 seconds (1 minute) and 86,400 seconds (24 hours) | 300 (5 minutes) |
| FifoQueue | Boolean | Designates a queue as FIFO. Valid values are true or false. If you don't specify the FifoQueue attribute, Amazon SQS creates a standard queue. You must provide this attribute during queue creation, and you can't change it for an existing queue. When you set this attribute, you must also explicitly provide the MessageGroupId for your messages. | |
| ContentBasedDeduplication | Boolean | Enables content-based deduplication. Valid values: true, false. Every message must have a unique MessageDeduplicationId. | |
|ApproximateNumberOfMessages | Number | Approximate number of messages available for retrieval from the queue. | |
| ApproximateNumberOfMessagesDelayed | Number | Approximate number of messages in the queue that are delayed and not available for reading immediately. This can happen when the queue is configured as a delay queue or when a message has been sent with a delay parameter. | |
| ApproximateNumberOfMessagesNotVisible | Number | Approximate number of messages that are in flight. Messages are considered to be in flight if they have been sent to a client but have not yet been deleted or have not yet reached the end of their visibility window. |  |
| CreatedTimestamp | Number | Time when the queue was created, in seconds | |
|LastModifiedTimestamp | Number |Time when the queue was last changed, in seconds | |
|QueueArn | String | Amazon resource name (ARN) of the queue | |
|===

==== Redrive Policy 
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|deadLetterTargetArn | String | The Amazon Resource Name (ARN) of the dead-letter queue to which Amazon SQS moves messages after the value of maxReceiveCount is exceeded. | |
| maxReceiveCount | Number | The number of times a message is delivered to the source queue before being moved to the dead-letter queue. When the ReceiveCount for a message exceeds the maxReceiveCount for a queue, Amazon SQS moves the message to the dead-letter-queue. | |
|===

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Queue Name a| String |  Name of the queue to create |  | x
| Attributes a| Object a| A map of attributes with their corresponding values. (See the table above) |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String 
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[deleteMessage]]
=== Delete Message
`<sqs:delete-message>`


This operation deletes the message identified by the message object in the queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Receipt Handle a| String |  Receipt handle of the message to be deleted |  | x
| Queue Url a| String |  URL of the queue to delete messages from. This parameter is optional and if you do not specify queueUrl you need to set in the configuration level Default Global Queue URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[deleteMessageBatch]]
=== Delete Message Batch
`<sqs:delete-message-batch>`


This operation deletes up to 10 messages from the specified queue. This is a batch version of DeleteMessage.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Entries a| Array of <<DeleteMessageBatchRequestEntry>> |  List of receipt handles for the messages to be deleted |  | x
| Queue Url a| String |  URL of the queue to delete messages as a batch from. This parameter is optional and if you do not specify the queueUrl you need to specify the Default Global Queue URL at the configuration level. |  | 
| Target Variable a| String |  Name of a variable in which to store the operation's output |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[deleteQueue]]
=== Delete Queue
`<sqs:delete-queue>`


This operation deletes the message queue represented by this object and can even delete a non-empty queue. Because deleting a queue can take up to 60 seconds, wait at least that long before you create a new queue with the same name.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  URL of the queue to delete. This parameter is optional and if you do not specify queueUrl you need to set in the configuration level Default Global Queue URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[getApproximateNumberOfMessages]]
=== Get Approximate Number Of Messages
`<sqs:get-approximate-number-of-messages>`


This operation retrieves an approximate number of visible messages for a queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  URL of the queue. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[getQueueAttributes]]
=== Get Queue Attributes
`<sqs:get-queue-attributes>`


This operation shows queue attributes to expose the underlying functionality.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Attribute Names a| Array of String |  List of attribute retrieve information for |  | 
| Queue Url a| String |  URL of the Amazon SQS queue to take action on This parameter is optional and if you do not specify queueUrl you need to set in the configuration level Default Global Queue URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[getQueueUrl]]
=== Get Queue Url
`<sqs:get-queue-url>`


This operation returns the URL of an existing queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Name a| String |  Name of the queue whose URL must be fetched |  | x
| Queue Owner AWS Account Id a| String |  AWS account ID of the owner that created the queue |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[listDeadLetterSourceQueues]]
=== List Dead Letter Source Queues
`<sqs:list-dead-letter-source-queues>`


This operation returns a list of the queues that have the RedrivePolicy queue attribute configured with a dead-letter queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  Queue URL of a dead-letter queue. This parameter is optional and if you do not specify queueUrl you need to set in the configuration level Default Global Queue URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[listQueues]]
=== List Queues
`<sqs:list-queues>`


This operation returns a list of your queues. The maximum number of queues that can be returned is 1000.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Name Prefix a| String |  String to use for filtering the list results. Only those queues whose name begins with the specified string are returned. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[purgeQueue]]
=== Purge Queue
`<sqs:purge-queue>`


This operation deletes the messages in a queue specified by the queue URL.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  Queue URL where messages are to be fetched from. This parameter is optional and if you do not specify queueUrl you need to set in the configuration level Default Global Queue URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[read]]
=== Read
`<sqs:read>`


This operation reads a number of messages from a queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  URL of the queue. |  | 
| Max Number Of Messages a| Number |  Maximum number of messages to read |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<Message>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[removePermission]]
=== Remove Permission
`<sqs:remove-permission>`


This operation removes a permission from this message queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Label a| String |  Name for the permission to be removed |  | x
| Queue Url a| String |  Permissions will be deleted from the queue represented by this URL. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


[[sendMessage]]
=== Send Message
`<sqs:send-message>`


This operation sends a message to a specified queue. The message must be between 1 and 256K bytes long.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| <<Message>> |  Message to send |  `#[payload]` | 
| Queue Url a| String |  Queue where the message is to be sent. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SendMessageResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[sendMessageBatch]]
=== Send Message Batch
`<sqs:send-message-batch>`


This operation delivers up to 10 messages to the specified queue. This is a batch version of SendMessage.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Messages a| Array of <<Message>> |  List of SendMessageBatchRequestEntry items |  `#[payload]` | 
| Queue Url a| String |  Queue where the message is to be sent. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:MESSAGE_SIZE_THRESHOLD_OUT_OF_RANGE 
* SQS:S3_BUCKET_ACCESS_DENIED 
* SQS:RETRY_EXHAUSTED 
* SQS:S3_BUCKET_NOT_FOUND 
* SQS:CONNECTIVITY 


[[setQueueAttributes]]
=== Set Queue Attributes
`<sqs:set-queue-attributes>`


This operation sets the value of one or more queue attributes, which can take up to 60 seconds to propagate throughout the SQS system (although changes made to the MessageRetentionPeriod attribute can take up to 15 minutes).


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Attributes a| Object |  Map of attributes to set |  `#[payload]` | 
| Queue Url a| String |  URL of the queue. |  | 
| Target Variable a| String |  The name of a variable to store the operation's output. |  | 
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

=== For Configurations
* <<config>> 

==== Throws
* SQS:RETRY_EXHAUSTED 
* SQS:CONNECTIVITY 


== Types

[[LargePayloadSupport]]
=== Large Payload Support

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Bucket a| String | Name of the AWS S3 bucket in which to store large payload messages.
 The AWS S3 bucket must already be created and configured in AWS S3. Enabling this feature incurs additional charges for using AWS S3. |  | x
| Message Size Threshold a| Number | The message size threshold value for storing message payloads in the AWS S3 bucket.
 The default value for the message size threshold is 256 KB and the maximum threshold size value is 256 KB. The maximum message size is 2 GB. | 256 | 
| Message Size Threshold Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Sets the data unit for the message size threshold | KB | 
|===

[[Tls]]
=== TLS

Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | For servers, a truststore contains certificates of the trusted clients. For clients, a truststore contains certificates of the trusted servers.  |  |
| Key Store a| <<KeyStore>> | For servers, a keystore contains the private and public key of the server. For clients, a keystore contains the private and public key of the client. |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> | Validates that a certificate was revoked. |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the truststore. The path is resolved relative to the current classpath and file system, if possible. |  |
| Password a| String | The password used to protect the truststore. |  |
| Type a| String | The type of trutstore used. |  |
| Algorithm a| String | The algorithm used by the truststore. |  |
| Insecure a| Boolean | If `true`, no certificate validations are performed, which makes connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the keystore. The path is resolved relative to the current classpath and file system, if possible. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | The alias of the key to use when the keystore contains multiple private keys. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Verify the last element of the certificate chain only. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method, which is the method not specified in the Prefer Crls field. |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|===

[[crl-file]]
=== CRL File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file |  | 
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  | 
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  | 
| Count a| Number | How many reconnection attempts to make. |  | 
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  | 
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  | 
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed-message. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions that determine when a message was redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[BatchResult]]
=== Batch Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Failed a| Array of <<BatchResultErrorEntry,BatchResultErrorEntry>> | A list of <<BatchResultErrorEntry,Batch Result Error Entry>> items. |  |
| Successful a| Array of String | A list of <<ChangeMessageVisibilityBatchRequestEntry,Change Message Visibility Batch Request Entry>> items. |  |
|===

[[BatchResultErrorEntry]]
=== Batch Result Error Entry

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Code a| String | An error code representing why the action failed on this entry. |  |
| Id a| String | The id of an entry in a batch request. |  |
| Message a| String | A message explaining why the action failed on this entry. |  |
| Sender Fault a| Boolean | Whether the error happened due to the sender's fault. |  |
|===

[[RequestIDAttribute]]
=== Request ID Attribute

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Request Id a| String | AWS request ID which can be used in the event a service call isn't working as expected and you need to work with
 AWS support to debug an issue. |  | 
|===

[[ChangeMessageVisibilityBatchRequestEntry]]
=== Change Message Visibility Batch Request Entry

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | An identifier for this particular receipt handle. This is used to communicate the result. Note that the **Id**s of a batch request need to be unique within the request.  |  |
| Receipt Handle a| String | The receipt handle for this entry. |  |
| Visibility Timeout a| Number | The new value (in seconds) for the message's visibility timeout. |  |
|===

[[DeleteMessageBatchRequestEntry]]
=== Delete Message Batch Request Entry

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | An identifier for this particular receipt handle. This is used to communicate the result. Note that the **Id**s of a batch request need to be unique within the
 request.  |  |
| Receipt Handle a| String | The receipt handle for this entry. |  |
|===

[[Message]]
=== Message

The output attributes for a sent message. 

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| body a| String | The message body to send |  |
| deduplicationId a| String | The token for deduplicating sent messages. If multiple messages are sent with the same deduplication ID, Amazon SQS accepts the messages successfully, but delivers only the first message during the 5-minute deduplication interval.   |  |
| delaySeconds a| Number |  Number of seconds that a specific message is delayed. Valid values are 0 through 900.
 If no value is specified, the default value for the queue is used. This parameter can
 only be set on a queue level--when FifoQueue is set, DelaySeconds cannot be set per message. |  |
| groupId a| String | Group this message belongs to in the FIFO Queue. This parameter applies only to FIFO queues.
 When creating a FIFO queue this parameter is required.|  |
| id a| String | A unique identifier for the message |  |
| message Attributes a| Object | A map of typed key-value pairs to send as message attributes. You must specify a value, key, and data type for each entry. |  |
| receipt Handle a| String | The receipt handle for this entry. |  |
|===

[[SendMessageResult]]
=== Send Message Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| MD5 Of Message Attributes a| String | An MD5 digest of the non-URL-encoded message attribute string. This can be used to verify that Amazon SQS received the message correctly. Amazon SQS first URL decodes the message before creating the MD5 digest. For information about MD5, go to http://www.faqs.org/rfcs/rfc1321.html[RFC 1321 - The MD5 Message-Digest Algorithm]. |  |
| MD5 Of Message Body a| String | An MD5 digest of the non-URL-encoded message body string. This can be used to verify that Amazon SQS received the message correctly. Amazon SQS first URL decodes the message before creating the MD5 digest. For information about MD5, go to http://www.faqs.org/rfcs/rfc1321.html[RFC 1321 - The MD5 Message-Digest Algorithm] |  |
| Message Id a| String | An element containing the message ID of the message sent to the queue. For more information, see http://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/ImportantIdentifiers.html[Amazon SQS Queue and Message Identifiers]. |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
